--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/2077-logo-white.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>2077 Collective</title>
-    <meta property="og:title" content="2077 Collective" />
-    <meta property="og:type" content="article" />
-    <meta property="og:image" content="/embed.png" />
-    <meta name="twitter:card" content="summary_large_image" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/2077-logo-white.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>2077 Collective</title>
+  <meta property="og:description"
+    content="Crypto research and technical analysis on Ethereum infrastructure, governance, protocols, and applications.">
+  <meta property="og:title" content="2077 Collective" />
+  <meta property="og:type" content="article" />
+  <meta property="og:image" content="/embed.png" />
+  <meta name="twitter:creator" content="@2077Collective">
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta property="og:url" content="https://2077.xyz/">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
