chore(fix): meta tag

--- a/index.html
+++ b/index.html
@@ -6,14 +6,26 @@
   <link rel="icon" type="image/svg+xml" href="/2077-logo-white.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>2077 Collective</title>
+  <meta name='title' content="2077 Collective | Crypto research and technical analysis on Ethereum infrastructure, governance, protocols, and applications." />
   <meta property="og:description"
     content="Crypto research and technical analysis on Ethereum infrastructure, governance, protocols, and applications.">
-  <meta property="og:title" content="2077 Collective" />
-  <meta property="og:type" content="article" />
+
+  <meta property='og:type' content='website' />
+  <meta property="og:title" content="2077 Collective | Ethereum Unofficial Creative Studio." />
+  <meta property="og:description" content="Crypto research and technical analysis on Ethereum infrastructure, governance, protocols, and applications." />
+  <meta property="og:type" content="website" />
   <meta property="og:image" content="/embed.png" />
+  <meta property="og:url" content="https://2077.xyz/">
+
   <meta name="twitter:creator" content="@2077Collective">
   <meta name="twitter:card" content="summary_large_image" />
-  <meta property="og:url" content="https://2077.xyz/">
+  <meta property='twitter:url' content="https://x.com/2077Collective" />
+  <meta property='twitter:title' content="2077 Collective (eth/acc)" />
+  <meta property='twitter:description' content="A league of creatives, researchers, developers, and marketers committed to making Ethereum great again. Ethereum’s Unofficial Creative Studio™." />
+  <meta property='twitter:image' content="/embed.png" />
+
+  <link rel='canonical' href="https://2077.xyz/" />
+
 </head>
 
 <body>
