chore(fix): remove nefarious link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/2077-logo-white.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>2077 Collective</title>
+  <title>2077 Collective - Ethereum's Unofficial Marketing Department</title>
   <meta name='title' content="2077 Collective | Crypto research and technical analysis on Ethereum infrastructure, governance, protocols, and applications." />
   <meta property="og:description"
     content="Crypto research and technical analysis on Ethereum infrastructure, governance, protocols, and applications.">
