add Plausible.io tracking snippet

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
   <link rel='canonical' href="https://2077.xyz/" />
 
+  <script defer data-domain="2077.xyz" src="https://plausible.io/js/script.js"></script>
+
 </head>
 
 <body>
