--- a/index.html
+++ b/index.html
@@ -1,38 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/2077-logo-white.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>2077 Collective - Ethereum's Unofficial Marketing Department</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/2077-logo-white.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>2077 Collective - Ethereum's Unofficial Marketing Department</title>
-  <meta name='title' content="2077 Collective | Crypto research and technical analysis on Ethereum infrastructure, governance, protocols, and applications." />
-  <meta property="og:description"
-    content="Crypto research and technical analysis on Ethereum infrastructure, governance, protocols, and applications.">
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="2077 Collective | Ethereum Unofficial Creative Studio."
+    />
+    <meta
+      property="og:description"
+      content="A league of creatives, researchers, developers, and marketers committed to making Ethereum great again. Ethereum's Unofficial Creative Studio™."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/embed.png" />
+    <meta property="og:url" content="https://2077.xyz/" />
 
-  <meta property='og:type' content='website' />
-  <meta property="og:title" content="2077 Collective | Ethereum Unofficial Creative Studio." />
-  <meta property="og:description" content="Crypto research and technical analysis on Ethereum infrastructure, governance, protocols, and applications." />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="/embed.png" />
-  <meta property="og:url" content="https://2077.xyz/">
+    <meta name="twitter:creator" content="@2077Collective" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://x.com/2077Collective" />
+    <meta property="twitter:title" content="2077 Collective (eth/acc)" />
+    <meta
+      property="twitter:description"
+      content="A league of creatives, researchers, developers, and marketers committed to making Ethereum great again. Ethereum's Unofficial Creative Studio™."
+    />
+    <meta property="twitter:image" content="/embed.png" />
 
-  <meta name="twitter:creator" content="@2077Collective">
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta property='twitter:url' content="https://x.com/2077Collective" />
-  <meta property='twitter:title' content="2077 Collective (eth/acc)" />
-  <meta property='twitter:description' content="A league of creatives, researchers, developers, and marketers committed to making Ethereum great again. Ethereum’s Unofficial Creative Studio™." />
-  <meta property='twitter:image' content="/embed.png" />
+    <link rel="canonical" href="https://2077.xyz/" />
 
-  <link rel='canonical' href="https://2077.xyz/" />
+    <script
+      defer
+      data-domain="2077.xyz"
+      src="https://plausible.io/js/script.js"
+    ></script>
+  </head>
 
-  <script defer data-domain="2077.xyz" src="https://plausible.io/js/script.js"></script>
-
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
